--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -6,8 +6,8 @@
 @import 'variables';
 
 // bootstrap
-@import '../node_modules/bootstrap/scss/bootstrap';
-@import '../node_modules/bootstrap-icons/font/bootstrap-icons.css';
+@import '../../../node_modules/bootstrap/scss/bootstrap';
+@import '../../../node_modules/bootstrap-icons/font/bootstrap-icons.css';
 
 // 各種定義
 @import 'common';
